@@ -1,6 +1,7 @@
 # Simulator main loop for m32r. -*- C -*-
+#
 # Copyright (C) 1996, 1997, 1998, 2007, 2008, 2009
-  Free Software Foundation, Inc.
+# Free Software Foundation, Inc.
 #
 # This file is part of the GNU Simulators.
 #
