@@ -1,7 +1,7 @@
 # Simulator main loop for m32r2. -*- C -*-
 #
 # Copyright 1996, 1997, 1998, 2003, 2004, 2007, 2008, 2009
-  Free Software Foundation, Inc.
+# Free Software Foundation, Inc.
 #
 # This file is part of GDB, the GNU debugger.
 #
