@@ -1,7 +1,7 @@
 # Simulator main loop for m32rx. -*- C -*-
 #
 # Copyright 1996, 1997, 1998, 2004, 2007, 2008, 2009
-  Free Software Foundation, Inc.
+# Free Software Foundation, Inc.
 #
 # This file is part of the GNU Simulators.
 #
